exports[`SelectDisplayMode should render 1`] = `
<ul
  className="nav"
  role={null}>
  <label
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-text"
    htmlFor={undefined}
    onSelect={null}>
    Display:
  </label>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-bars"
        title={null} />
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-bars"
            title={null} />
           
          Table
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-list-alt"
            title={null} />
           
          Expanded
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-th-large"
            title={null} />
           
          Tile
        </a>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`SelectDisplayMode should render id if provided 1`] = `
<ul
  className="nav"
  role={null}>
  <label
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-text"
    htmlFor="toolbar-display-mode"
    onSelect={null}>
    Display:
  </label>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id="toolbar-display-mode"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-bars"
        title={null} />
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby="toolbar-display-mode"
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id="toolbar-display-mode-table"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-bars"
            title={null} />
           
          Table
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id="toolbar-display-mode-large"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-list-alt"
            title={null} />
           
          Expanded
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id="toolbar-display-mode-tile"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-th-large"
            title={null} />
           
          Tile
        </a>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`SelectDisplayMode should render with displayMode = large 1`] = `
<ul
  className="nav"
  role={null}>
  <label
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-text"
    htmlFor={undefined}
    onSelect={null}>
    Display:
  </label>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-list-alt"
        title={null} />
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-bars"
            title={null} />
           
          Table
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-list-alt"
            title={null} />
           
          Expanded
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-th-large"
            title={null} />
           
          Tile
        </a>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`SelectDisplayMode should render with displayMode = table 1`] = `
<ul
  className="nav"
  role={null}>
  <label
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-text"
    htmlFor={undefined}
    onSelect={null}>
    Display:
  </label>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-bars"
        title={null} />
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-bars"
            title={null} />
           
          Table
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-list-alt"
            title={null} />
           
          Expanded
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-th-large"
            title={null} />
           
          Tile
        </a>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`SelectDisplayMode should render with displayMode = tile 1`] = `
<ul
  className="nav"
  role={null}>
  <label
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-text"
    htmlFor={undefined}
    onSelect={null}>
    Display:
  </label>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-th-large"
        title={null} />
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-bars"
            title={null} />
           
          Table
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-list-alt"
            title={null} />
           
          Expanded
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          <i
            aria-hidden="true"
            className="fa fa-th-large"
            title={null} />
           
          Tile
        </a>
      </li>
    </ul>
  </li>
</ul>
`;
